--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-fade-in": "^2.0.1",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.16",
@@ -26,11 +27,12 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
