--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.0"
   },
+  "engines": {
+    "node": "12.18.4"
+  },
   "scripts": {
     "start": "serve -s build",
     "build": "react-scripts build",
