--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "node": "12.18.4"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
